fix latest undertow compile